--- a/style.css
+++ b/style.css
@@ -97,7 +97,6 @@ body {
     border: 2px solid var(--borda);
     padding: 24px;
     font-size: 24px;
-    cursor: pointer;
 }
 
 .parametro-senha__texto {
@@ -108,14 +107,40 @@ body {
     font-size: 24px;
 }
 
-label{
+label {
     font-size: 20px;
 }
 
-.checkbox{
+.checkbox {
     width: 20px;
     height: 20px;
     cursor: pointer;
+}
+.barra{
+    background-color: var(--fundo-senha);
+    height: 30px;
+    width: 100%;
+}
+.forca{
+    height: 30px;
+    position: relative;
+    bottom: 30px;
+}
+.fraca{
+    width: 25%;
+    background-color: #E71B32; 
+}
+.parametro-senha-textos{
+    display: flex;
+    justify-content: space-between;
+}
+.media{
+    background-color: #FAF408;
+    width: 50%;
+}
+.forte{
+    background-color: #00FF85;
+    width: 100%;
 }
 
 @media screen and (min-width: 768px) {
