--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ body {
     border: 2px solid var(--borda);
     padding: 24px;
     font-size: 24px;
+    cursor: pointer;
 }
 
 .parametro-senha__texto {
@@ -116,32 +117,39 @@ label {
     height: 20px;
     cursor: pointer;
 }
-.barra{
+
+.barra {
     background-color: var(--fundo-senha);
     height: 30px;
     width: 100%;
 }
-.forca{
+
+.forca {
     height: 30px;
     position: relative;
     bottom: 30px;
 }
-.fraca{
+
+.fraca {
     width: 25%;
-    background-color: #E71B32; 
+    background-color: #E71B32;
 }
-.parametro-senha-textos{
-    display: flex;
-    justify-content: space-between;
-}
-.media{
+
+.media {
     background-color: #FAF408;
     width: 50%;
 }
-.forte{
+
+.forte {
     background-color: #00FF85;
     width: 100%;
 }
+
+.parametro-senha-textos {
+    display: flex;
+    justify-content: space-between;
+}
+
 
 @media screen and (min-width: 768px) {
     .parametro-coluna__senha {
